--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "import:jokes": "ts-node ./src/scripts/import-jokes.ts"
+    "import:jokes": "ts-node ./src/scripts/import-jokes.ts",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,css,md,mdx,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,css,md,mdx,json}\""
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -40,6 +42,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "eslint-plugin-import": "^2.32.0",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.4.0",
