--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@tabler/icons-react": "^3.35.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.552.0",
     "luxon": "^3.7.2",
     "next": "16.0.1",
     "react": "19.2.0",
+    "react-day-picker": "^9.11.2",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.3.1"
   },
